# tioga

./: .gitignore  BUILDING  CMakeBuild.md  CMakeLists.txt  COPYRIGHT  LICENSE  README  TODO  TODO.gpu  clean.sh  default.config  findline  freya.config  icme.config  makefile  onyx.config  post-proc.config  romeo.config  test.sh  test_summit.sh  tioga.pro  xstream.config
.github/workflows/: ci.yml  cuda-ci.yml  hip-ci.yml
case/: clean.sh  iblank.lay  run.sh  run_summit.sh
case/grid/: data.tri  input
cmake/: TIOGAConfig.cmake.in
driver/: CMakeLists.txt  checkfiles.f90  gpu_test.C  gridutils.f90  kokkos.C  kokkos.f90  makefile  modules.f90  poisson_mms.f90  poisson_utils.f90  testTioga.f90  testTioga_dataRead.f90
gridGen/: CMakeLists.txt  Makefile  buildGrid.f  buildGrid.f.bak  clust.f  findfact.f90  modules.f  partSphere.f90
include/: ADT.h  CartBlock.h  MeshBlock.h  codetypes.h  convert.i  cuda_funcs.h  dADT.h  dMeshBlock.h  error.hpp  funcs.hpp  globals.h  highOrder_kernels.h  linklist.h  math_funcs.h  parallelComm.h  points.hpp  superMesh.hpp  tioga.h  tioga.i  tiogaInterface.h  utils.h
python/: CMakeLists.txt  python_wrap.cpp  pytioga.cpp  pytioga.h  utils.cpp  utils.h
python/example/: helper.py  test.py
run/: convert.py  tiogaInterface.py  zefr.py  zefrInterface.py
src/: .utils.c.swp  ADT.C  ADT.h  CMakeLists.txt  CartBlock.C  CartBlock.h  CartGrid.C  CartGrid.h  Makefile.example  MeshBlock.C  MeshBlock.h  TiogaMeshInfo.h  bookKeeping.C  buildADTrecursion.c  cartOps.C  cartUtils.h  cellVolume.f90  checkContainment.C  codetypes.h  computeCellVolume.c  cuda_funcs.h  cuda_functions.h  dADT.cu  dMeshBlock.C  dMeshBlock.cu  dMeshBlock.h  dataUpdate.C  dataUpdateGPU.C  error.hpp  exchangeAMRDonors.C  exchangeBoxes.C  exchangeDonors.C  exchangeSearchData.C  findline  funcs.cpp  funcs.hpp  getCartReceptors.C  get_amr_index_xyz.c  globals.h  gpu_device_functions.h  (+47 more)
src/.svn/: entries
src/.svn/text-base/: ADT.C.svn-base  CartBlock.C.svn-base  CartGrid.C.svn-base  CartGrid.h.svn-base  MeshBlock.C.svn-base  bookKeeping.C.svn-base  cellVolume.f90.svn-base  codetypes.h.svn-base  computeCellVolume.f90.svn-base  exchangeAMRDonors.C.svn-base  exchangeBoxes.C.svn-base  exchangeDonors.C.svn-base  getCartReceptors.C.svn-base  get_amr_index_xyz.c.svn-base  highOrder.C.svn-base  kaiser.f.svn-base  linklist.c.svn-base  makefile.svn-base  parallelComm.h.svn-base  tioga.h.svn-base  tiogaInterface.C.svn-base  utils.c.svn-base  writeOutput.C.svn-base
zefr+samcart/: run_zefr.py  runfile.dict  samcartStandIn.py
zefr+samcart/samcart/: input.samcart
zefr+samcart/zefr/: box2.coarse.geo  box2.coarse.msh  input_sphere  sphere_hex.coarse.geo  sphere_hex.coarse.msh
